[project]
name = "repo_mapper"
authors = [
    {name="ed cuss"},
]
description = ""
readme = "README.md"
requires-python = ">=3.8"
version = "0.1.0"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "hypothesis",    
]
lint = [
    "pre-commit",
    "ruff",
]
dev = [
    "repo_mapper[test,lint]",
]

[tool.coverage.run]
branch = true
source=["src"]
omit=[
    "__main__.py"
]

[tool.coverage.report]
show_missing=true