[project]
name = "repo_mapper"
authors = [
    {name="ed cuss"},
]
description = ""
readme = "docs/README.md"
requires-python = ">=3.8"
version = "0.1.0"
dependencies = []

[tool.coverage.run]
branch = true
source=["src"]
omit=[
    "__main__.py"
]

[tool.coverage.report]
show_missing=true

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=3.5.0",
    "pytest>=8.3.4",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.4",
]
